--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-  "type": "git",
-  "url": "https://github.com/Holger-Will/node-enocean.git"
-},
+    "type": "git",
+    "url": "https://github.com/Holger-Will/node-enocean.git"
+  },
   "author": "Holger Will",
   "license": "ISC",
   "dependencies": {
     "crc": "^3.3.0",
-    "node-bitarray": "0.0.2"
+    "node-bitarray": "0.0.2",
+    "serialport": "^1.7.4"
   }
 }
