--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "license": "ISC",
   "dependencies": {
     "serialport": "^2.0.0"
+  },
+  "devDependencies": {
+    "chai": "^3.3.0",
+    "mocha": "^2.3.3"
   }
 }
