WIP new memory impl.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Holger Will",
   "license": "ISC",
   "dependencies": {
+    "level": "^1.6.0",
     "serialport": "^3.0.0",
     "serialport-enocean-parser": "^0.1.0"
   },
