--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "Holger Will",
   "license": "ISC",
   "dependencies": {
+    "ansi": "^0.3.1",
     "level": "^1.6.0",
     "serialport": "^4.0.7",
     "serialport-enocean-parser": "^0.1.0"
