--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "ISC",
   "dependencies": {
     "ansi": "^0.3.1",
+    "eep-transcoder": "^0.1.0",
     "level": "^1.6.0",
     "serialport": "^4.0.7",
     "serialport-enocean-parser": "^0.1.0"
